<resources>
    <string name="app_name">HoaGiay Coffee</string>
    <string name="HintUsername">Username</string>
    <string name="HintPassword">Password</string>
    <string name="HintRePassword">Re-Password</string>
    <string name="HelpText">Your password must include 8 characters</string>
    <string name="error_NoText_notification">Field can not be empty!</string>
    <string name="error_incorrectLength_notification">Your password should use Max count characters!</string>
    <string name="error_incorrectMaxLength_notification">You should use under Max count characters!</string>
    <string name="error_incorrectRePassword">Re-password have to same as Password</string>
    <string name="error_incorrectProductPrice">Your product price are not correctly</string>
    <string name="error_incorrectImageView">Your imageView got a problem</string>
    <string name="error_incorrectImage">Your product have to get a specific image</string>
    <string name="warning_fillUpProductInfor">Ban can hoan thine thong tin ve san pham truoc khi them vao Menu</string>
    <string name="Login">LOGIN</string>
    <string name="Signup">SIGN UP</string>
    <string name="Submit">SUBMIT</string>
    <string name="Reset">RESET</string>
    <string name="description_SignupAndLogin_content">This content contain Login fragment and Sign Up fragment</string>
    <string name="description_login_button">Sign in app here</string>
    <string name="description_signup_button">Sign up an account for app here</string>
    <string name="description_user_avarta">Display profile of user here</string>
    <string name="thuy">Tớ Là Thúy</string>
    <string name="instagram">Instagram: tohatuyyybe.o</string>
    <string name="title_first_page">Danh sách sản phẩm</string>
    <string name="title_second_page">Khuyến mãi tuần</string>
    <string name="title_third_page">Thông tin cá nhân</string>
    <string name="title_order_detail">Tình trạng đơn hàng</string>
    <string name="title_build_menu">Thêm thực đơn</string>
    <string name="title_filter_list">arrange list</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="product_name_vn">Vietnamese Product Name</string>
    <string name="product_name_en">English Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="Camera">Camera</string>
    <string name="product_image">Show product image here</string>
    <string name="currency">VNĐ</string>
</resources>