<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/item_first_page"
            android:icon="@drawable/ic_baseline_fastfood_24"
            android:title="@string/title_first_page"
            />
        <item
            android:id="@+id/item_second_page"
            android:icon="@drawable/ic_baseline_thumb_up_alt_24"
            android:title="@string/title_second_page"/>
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group2">
        <item
            android:id="@+id/item_third_page"
            android:icon="@drawable/ic_baseline_verified_user_24"
            android:title="@string/title_third_page"/>
        <item
            android:id="@+id/item_page_order_detail"
            android:icon="@drawable/ic_baseline_dinner_dining_24"
            android:title="@string/title_order_detail"/>
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group3">
        <item
            android:id="@+id/item_build_menu"
            android:icon="@drawable/ic_baseline_wysiwyg_24"
            android:title="@string/title_build_menu"/>
        <item
            android:id="@+id/item_sign_out"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/sign_out"/>
    </group>
</menu>