<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/shire_pink"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="true"
    android:layout_marginTop="15dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="15dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_list_drink_detail"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:background="@drawable/standard_outline_button_form"
            android:scaleType="centerCrop"
            android:contentDescription="@string/product_image" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">
            <TextView
                android:id="@+id/tv_list_drinks_product_nameVN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_name_vn"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/tv_list_drinks_product_nameEN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_name_en"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/tv_list_drinks_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_price"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>