<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/lao_header_view_drawer_center_hall"
    android:gravity="center_horizontal"
    android:background="@color/camel">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_drawer_avarta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="4dp"
        android:background="@color/camel"
        android:src="@mipmap/ic_drawer_avarta_thuy_round"
        android:clickable="true"
        android:contentDescription="@string/description_user_avarta"
        />
    <TextView
        android:id="@+id/tv_drawer_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        style="@style/Widget.MaterialComponents.TextView"
        android:textSize="20sp"
        android:text="@string/thuy"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/tv_drawer_gmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="14dp"
        style="@style/Widget.MaterialComponents.TextView"
        android:text="@string/instagram"
        android:textColor="@color/white"/>
</androidx.appcompat.widget.LinearLayoutCompat>