<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/img_buildMenu_image"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/standard_outline_button_form"
        android:scaleType="centerCrop"
        android:contentDescription="@string/product_image" />
    <ImageButton
        android:id="@+id/btn_camera"
        android:layout_width="128dp"
        android:layout_height="85dp"
        android:layout_below="@id/img_buildMenu_image"
        android:layout_alignStart="@id/img_buildMenu_image"
        android:layout_marginBottom="10dp"
        android:background="@drawable/brown_camera_icon"
        android:contentDescription="@string/product_image" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_buildMenu_nameVN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_camera"
        android:hint="@string/product_name_vn"
        android:textColorHint="@color/hint_color"
        android:layout_margin="5dp"
        app:errorEnabled="true"
        app:errorTextColor="@color/scarlet"
        app:counterEnabled="true"
        app:counterMaxLength="20">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_buildMenu_nameVN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_buildMenu_nameEN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputLayout_buildMenu_nameVN"
        android:layout_margin="5dp"
        android:hint="@string/product_name_en"
        android:textColorHint="@color/hint_color"
        app:errorEnabled="true"
        app:errorTextColor="@color/scarlet"
        app:counterMaxLength="20"
        app:counterEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_buildMenu_nameEN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_buildMenu_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputLayout_buildMenu_nameEN"
        android:layout_margin="5dp"
        android:hint="@string/product_price"
        android:textColorHint="@color/hint_color"
        app:errorEnabled="true"
        app:errorTextColor="@color/scarlet">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_buildMenu_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_buildMenu_Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputLayout_buildMenu_price"
        android:layout_alignEnd="@id/inputLayout_buildMenu_price"
        android:text="@string/Submit" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_buildMenu_Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reset"
        android:layout_below="@id/inputLayout_buildMenu_price"
        android:layout_toStartOf="@id/btn_buildMenu_Submit"
        android:layout_marginEnd="15dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>
</RelativeLayout>