<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_signup_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/HintUsername"
        android:textColorHint="@color/hint_color"
        android:layout_above="@id/inputLayout_signup_password"
        android:layout_margin="5dp"
        app:errorEnabled="true"
        app:errorTextColor="@color/scarlet"
        app:counterEnabled="true"
        app:counterMaxLength="10">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/HintPassword"
        android:textColorHint="@color/hint_color"
        android:layout_above="@id/inputLayout_signup_re_password"
        android:layout_margin="5dp"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        app:errorTextColor="@color/scarlet"
        app:counterEnabled="true"
        app:counterMaxLength="8">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_signup_re_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/HintRePassword"
        android:textColorHint="@color/hint_color"
        android:layout_margin="5dp"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        app:errorTextColor="@color/scarlet"
        app:counterEnabled="true"
        app:counterMaxLength="8">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_signup_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signup_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:layout_below="@id/inputLayout_signup_re_password"
        android:layout_marginTop="5dp"
        android:layout_alignEnd="@id/inputLayout_signup_re_password"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signup_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Submit"
        android:layout_below="@id/inputLayout_signup_re_password"
        android:layout_marginTop="5dp"
        android:layout_alignTop="@id/btn_signup_login"
        android:layout_toStartOf="@id/btn_signup_login"
        android:layout_marginEnd="12dp" />
</RelativeLayout>